# rustmusic_tui

./: ARCHITECTURE.md  Cargo.toml  README.md
src/: app.rs  audio.rs  config.rs  library.rs  main.rs  tui.rs  ui.rs
