[package]
name = "rustmusic_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
dirs = "6.0.0"
image = "0.25.9"
lofty = "0.16.1"
ratatui = "0.29.0"
ratatui-image = "8.0.1"
rodio = "0.17.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"
walkdir = "2.5.0"
